@startuml

title __AESTHETICS's Class Diagram__\n

  namespace aesthetics {
    interface aesthetics.Aesthetics {
        {abstract} + create()
        {abstract} + createColor()
        {abstract} + createFont()
        {abstract} + createStyle()
        {abstract} + toString()
    }
  }
  

  namespace aesthetics {
    class aesthetics.AestheticsFactory {
        {static} + getAesthetics()
    }
  }
  

  namespace aesthetics {
    class aesthetics.CAesthetics {
        + create()
        + createColor()
        + createFont()
        + createStyle()
        + toString()
        ~ CAesthetics()
    }
  }
  

  namespace aesthetics {
    class aesthetics.CPPAesthetics {
        + create()
        + createColor()
        + createFont()
        + createStyle()
        + toString()
        ~ CPPAesthetics()
    }
  }
  

  namespace aesthetics {
    class aesthetics.PythonAesthetics {
        + create()
        + createColor()
        + createFont()
        + createStyle()
        + toString()
        ~ PythonAesthetics()
    }
  }
  

  aesthetics.CAesthetics .up.|> aesthetics.Aesthetics
  aesthetics.CAesthetics o-- aesthetics.color.Color : color
  aesthetics.CAesthetics o-- aesthetics.font.Font : font
  aesthetics.CAesthetics o-- aesthetics.style.Style : style
  aesthetics.CPPAesthetics .up.|> aesthetics.Aesthetics
  aesthetics.CPPAesthetics o-- aesthetics.color.Color : color
  aesthetics.CPPAesthetics o-- aesthetics.font.Font : font
  aesthetics.CPPAesthetics o-- aesthetics.style.Style : style
  aesthetics.PythonAesthetics .up.|> aesthetics.Aesthetics
  aesthetics.PythonAesthetics o-- aesthetics.color.Color : color
  aesthetics.PythonAesthetics o-- aesthetics.font.Font : font
  aesthetics.PythonAesthetics o-- aesthetics.style.Style : style


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
